Resources/Parsers/b/bParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/b/b.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import bListener from './bListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class bParser extends antlr4.Parser {

    static grammarFileName = "b.g4";
    static literalNames = [ null, "','", "';'", "'('", "')'", "':'", "'{'", 
                            "'}'", "'return'", "'goto'", "'switch'", "'while'", 
                            "'if'", "'else'", "'case'", "'extrn'", "'auto'", 
                            "'?'", "'&'", "'='", "'++'", "'--'", "'-'", 
                            "'!'", "'|'", "'=='", "'!='", "'<'", "'<='", 
                            "'>'", "'>='", "'<<'", "'>>'", "'+'", "'%'", 
                            "'*'", "'/'", "'['", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "NAME", 
                             "INT", "STRING1", "STRING2", "BLOCKCOMMENT", 
                             "WS" ];
    static ruleNames = [ "program", "definition", "ival", "statement", "nullstmt", 
                         "expressionstmt", "blockstmt", "returnstmt", "gotostmt", 
                         "switchstmt", "whilestmt", "ifstmt", "casestmt", 
                         "externsmt", "autosmt", "rvalue", "ternary", "comparison", 
                         "assignment", "expression", "functioninvocation", 
                         "functionparameters", "assign", "incdec", "unary", 
                         "binary", "lvalue", "constant", "name" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = bParser.ruleNames;
        this.literalNames = bParser.literalNames;
        this.symbolicNames = bParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, bParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===39) {
	            this.state = 58;
	            this.definition();
	            this.state = 63;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 64;
	        this.match(bParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, bParser.RULE_definition);
	    var _la = 0;
	    try {
	        this.state = 100;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 66;
	            this.name();
	            this.state = 68;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            if(la_===1) {
	                this.state = 67;
	                this.constant();

	            }
	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 15) !== 0)) {
	                this.state = 70;
	                this.ival();
	                this.state = 75;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 71;
	                    this.match(bParser.T__0);
	                    this.state = 72;
	                    this.ival();
	                    this.state = 77;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	                this.state = 82;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 83;
	            this.match(bParser.T__1);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 85;
	            this.name();
	            this.state = 86;
	            this.match(bParser.T__2);
	            this.state = 95;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===39) {
	                this.state = 87;
	                this.name();
	                this.state = 92;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 88;
	                    this.match(bParser.T__0);
	                    this.state = 89;
	                    this.name();
	                    this.state = 94;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 97;
	            this.match(bParser.T__3);
	            this.state = 98;
	            this.statement();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ival() {
	    let localctx = new IvalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, bParser.RULE_ival);
	    try {
	        this.state = 104;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 40:
	        case 41:
	        case 42:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 102;
	            this.constant();
	            break;
	        case 39:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 103;
	            this.name();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, bParser.RULE_statement);
	    try {
	        this.state = 121;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 106;
	            this.externsmt();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 107;
	            this.autosmt();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 108;
	            this.name();
	            this.state = 109;
	            this.match(bParser.T__4);
	            this.state = 110;
	            this.statement();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 112;
	            this.casestmt();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 113;
	            this.blockstmt();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 114;
	            this.ifstmt();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 115;
	            this.whilestmt();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 116;
	            this.switchstmt();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 117;
	            this.gotostmt();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 118;
	            this.returnstmt();
	            break;

	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 119;
	            this.expressionstmt();
	            break;

	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 120;
	            this.nullstmt();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nullstmt() {
	    let localctx = new NullstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, bParser.RULE_nullstmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressionstmt() {
	    let localctx = new ExpressionstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, bParser.RULE_expressionstmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.rvalue();
	        this.state = 126;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	blockstmt() {
	    let localctx = new BlockstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, bParser.RULE_blockstmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(bParser.T__5);
	        this.state = 132;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 16113484) !== 0) || ((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 15) !== 0)) {
	            this.state = 129;
	            this.statement();
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 135;
	        this.match(bParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnstmt() {
	    let localctx = new ReturnstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, bParser.RULE_returnstmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(bParser.T__7);
	        this.state = 142;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 138;
	            this.match(bParser.T__2);
	            this.state = 139;
	            this.rvalue();
	            this.state = 140;
	            this.match(bParser.T__3);
	        }

	        this.state = 144;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gotostmt() {
	    let localctx = new GotostmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, bParser.RULE_gotostmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(bParser.T__8);
	        this.state = 147;
	        this.rvalue();
	        this.state = 148;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switchstmt() {
	    let localctx = new SwitchstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, bParser.RULE_switchstmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.match(bParser.T__9);
	        this.state = 151;
	        this.rvalue();
	        this.state = 152;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whilestmt() {
	    let localctx = new WhilestmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, bParser.RULE_whilestmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(bParser.T__10);
	        this.state = 155;
	        this.match(bParser.T__2);
	        this.state = 156;
	        this.rvalue();
	        this.state = 157;
	        this.match(bParser.T__3);
	        this.state = 158;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifstmt() {
	    let localctx = new IfstmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, bParser.RULE_ifstmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.match(bParser.T__11);
	        this.state = 161;
	        this.match(bParser.T__2);
	        this.state = 162;
	        this.rvalue();
	        this.state = 163;
	        this.match(bParser.T__3);
	        this.state = 164;
	        this.statement();
	        this.state = 167;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        if(la_===1) {
	            this.state = 165;
	            this.match(bParser.T__12);
	            this.state = 166;
	            this.statement();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	casestmt() {
	    let localctx = new CasestmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, bParser.RULE_casestmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 169;
	        this.match(bParser.T__13);
	        this.state = 170;
	        this.constant();
	        this.state = 171;
	        this.match(bParser.T__4);
	        this.state = 172;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	externsmt() {
	    let localctx = new ExternsmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, bParser.RULE_externsmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.match(bParser.T__14);
	        this.state = 175;
	        this.name();
	        this.state = 180;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 176;
	            this.match(bParser.T__0);
	            this.state = 177;
	            this.name();
	            this.state = 182;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 183;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	autosmt() {
	    let localctx = new AutosmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, bParser.RULE_autosmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this.match(bParser.T__15);
	        this.state = 186;
	        this.name();
	        this.state = 188;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 40)) & ~0x1f) === 0 && ((1 << (_la - 40)) & 7) !== 0)) {
	            this.state = 187;
	            this.constant();
	        }

	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 190;
	            this.match(bParser.T__0);
	            this.state = 191;
	            this.name();
	            this.state = 193;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 40)) & ~0x1f) === 0 && ((1 << (_la - 40)) & 7) !== 0)) {
	                this.state = 192;
	                this.constant();
	            }

	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 200;
	        this.match(bParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rvalue() {
	    let localctx = new RvalueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, bParser.RULE_rvalue);
	    try {
	        this.state = 206;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 202;
	            this.expression();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 203;
	            this.comparison();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 204;
	            this.ternary();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 205;
	            this.assignment();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ternary() {
	    let localctx = new TernaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, bParser.RULE_ternary);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 208;
	        this.expression();
	        this.state = 209;
	        this.match(bParser.T__16);
	        this.state = 210;
	        this.rvalue();
	        this.state = 211;
	        this.match(bParser.T__4);
	        this.state = 212;
	        this.rvalue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comparison() {
	    let localctx = new ComparisonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, bParser.RULE_comparison);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 214;
	        this.expression();
	        this.state = 215;
	        this.binary();
	        this.state = 216;
	        this.rvalue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, bParser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 218;
	        this.name();
	        this.state = 219;
	        this.assign();
	        this.state = 220;
	        this.rvalue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, bParser.RULE_expression);
	    try {
	        this.state = 240;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 222;
	            this.match(bParser.T__2);
	            this.state = 223;
	            this.rvalue();
	            this.state = 224;
	            this.match(bParser.T__3);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 226;
	            this.name();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 227;
	            this.constant();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 228;
	            this.incdec();
	            this.state = 229;
	            this.name();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 231;
	            this.name();
	            this.state = 232;
	            this.incdec();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 234;
	            this.unary();
	            this.state = 235;
	            this.rvalue();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 237;
	            this.match(bParser.T__17);
	            this.state = 238;
	            this.name();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 239;
	            this.functioninvocation();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functioninvocation() {
	    let localctx = new FunctioninvocationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, bParser.RULE_functioninvocation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 242;
	        this.name();
	        this.state = 243;
	        this.match(bParser.T__2);
	        this.state = 245;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 15990792) !== 0) || ((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 15) !== 0)) {
	            this.state = 244;
	            this.functionparameters();
	        }

	        this.state = 247;
	        this.match(bParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionparameters() {
	    let localctx = new FunctionparametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, bParser.RULE_functionparameters);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 249;
	        this.rvalue();
	        this.state = 254;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 250;
	            this.match(bParser.T__0);
	            this.state = 251;
	            this.rvalue();
	            this.state = 256;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign() {
	    let localctx = new AssignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, bParser.RULE_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 257;
	        this.match(bParser.T__18);
	        this.state = 259;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        if(la_===1) {
	            this.state = 258;
	            this.binary();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	incdec() {
	    let localctx = new IncdecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, bParser.RULE_incdec);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 261;
	        _la = this._input.LA(1);
	        if(!(_la===20 || _la===21)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unary() {
	    let localctx = new UnaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, bParser.RULE_unary);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 263;
	        _la = this._input.LA(1);
	        if(!(_la===22 || _la===23)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


